# ZOS-Index-demo

./: .gitignore  README.md  index.html  index.json
assets/js/: indexes.js  init.js  readme.js  utils.js
imgs/: owrjsn020.img  owrofc020.img  owrofc030.img
zos-index-generator/: Cargo.toml
zos-index-generator/src/: main.rs
zos-index-generator/src/ssh_key/: pushzig_rsa  pushzig_rsa.pub
